--- a/money/app/views/products/index.html.erb
+++ b/money/app/views/products/index.html.erb
@@ -1,8 +1,18 @@
 <h1>Products#index</h1>
-
+<%= render 'payola/transactions/stripe_header' %>
 
 <ul>
   <% @products.each do |product| %>
     <li><%= link_to product.name, product %></li>
+  <% end %>
+</ul>
+
+<h2>We also have books!</h2>
+<ul>
+  <% @books.each do |book| %>
+    <li>
+      <%= book.name %>
+      <%= render 'payola/transactions/checkout', sellable: book %>
+    </li>
   <% end %>
 </ul>
